<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desc_list_item_icon">Item Icon</string> 
    <string name="action_search_text">Search</string>  
    <string name="action_bag_text">Shopping Bag</string> 
    <string name="action_whishlist_text">Whishlist</string>
    <string name="search_hint">search&#8230;</string> 
    <string name="empty_bag_message">Your bag is empty</string>
    <string name="empty_wishlist_message">Your wishlist is empty</string>
    <string name="continue_shopping_message">Lanjut Berbelanja</string>
    <string name="add_to_message">Add to</string>
    <string name="loading_message_begin">Loading data, please wait&#8230;</string>
    <string name="loading_message_finish">Data loaded successfully</string>
    <string name="username">Username</string>
    <string name="username_hint">username</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>
    <string name="login_text">Login</string>
    <string name="login_welcoming_msg">Silakan Login</string>
    <string name="login_success_msg">Login Berhasil</string>
    <string name="access_denied">Tidak dapat melihat katalog pada %1$s ini</string>

</resources>
